--- a/estilos/style.css
+++ b/estilos/style.css
@@ -29,7 +29,33 @@ section#telefone {
     left: 50%;
     transform: translate(-50%, -50%);
 
-    height: 627px;
-    width: 311px;
-    background: url('../imagens/frame-iphone.png') no-repeat;
+    height: 550px;
+    width: 273px;
+    background: url('../imagens/frame-telefone.png') no-repeat;
+}
+
+iframe#tela {
+    position: relative;
+    top: 12px;
+    left: 14px;
+    width: 244px;
+    height: 526px;
+    border-radius: 32px;
+}
+section#redes-sociais {
+    text-align: right;
+}
+
+section#redes-sociais img {
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.329);
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover {
+    border: 3px solid rgba(255, 255, 255, 0.522);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.251);
+    transition: transform 0.5s, border .5s;
 }
